--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "docker:prisma:reset": "docker-compose run --rm --entrypoint yarn next prisma:reset"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
     "faker": "^5.5.3",
     "framer-motion": "^4",
     "next": "12.0.7",
+    "next-i18next": "^10.2.0",
     "prisma": "^3.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -42,9 +48,11 @@
     "@types/faker": "^5.5.9",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
     "cypress": "^9.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
