--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prisma": "^3.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.0",
     "superjson": "^1.8.0",
     "zustand": "^3.6.7"
   },
