--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -32,7 +33,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
-    "faker": "^5.5.3",
     "framer-motion": "^6.2.1",
     "next": "12.0.7",
     "prisma": "^3.7.0",
@@ -53,6 +53,8 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "faker": "^6.6.6",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
