--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
     "framer-motion": "^6.2.1",
+    "lodash.groupby": "^4.6.0",
+    "lodash.max": "^4.0.1",
+    "lodash.min": "^4.0.1",
+    "lodash.sum": "^4.0.2",
     "next": "12.0.7",
     "prisma": "^3.7.0",
     "react": "17.0.2",
@@ -44,6 +48,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/faker": "^5.5.9",
+    "@types/lodash.groupby": "^4.6.6",
+    "@types/lodash.max": "^4.0.6",
+    "@types/lodash.min": "^4.0.6",
+    "@types/lodash.sum": "^4.0.6",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
