--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
     "superjson": "^1.8.0",
+    "victory": "^36.2.1",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
-    "@types/faker": "^5.5.9",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
-    "faker": "^6.6.6",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
