--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://jevote:jevote@localhost:5432/jevote?schema=public"
 PREVIEW_SECRET=verysecret
-SENTRY_AUTH_TOKEN=sentryAuthToken
+# For result screenshotting
+BASE_URL=http://localhost:3000
