--- a/package.json
+++ b/package.json
@@ -32,19 +32,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@prisma/client": "^3.7.0",
+    "@prisma/client": "^3.10.0",
     "@sentry/nextjs": "^6.18.0",
     "axios": "^0.26.0",
-    "csv-parser": "^3.0.0",
     "framer-motion": "^6.2.6",
+    "husky": "^7.0.4",
     "lodash.isequal": "^4.5.0",
     "next": "^12.1.0",
-    "prisma": "^3.7.0",
+    "next-query-params": "^2.1.2",
+    "prisma": "^3.10.0",
+    "puppeteer": "^13.5.0",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
-    "sharp": "^0.30.1",
+    "sharp": "^0.30.2",
     "superjson": "^1.8.1",
     "uuid": "^8.3.2",
     "victory": "^36.2.1",
@@ -59,10 +61,10 @@
     "@types/react": "17.0.37",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "csv-parser": "^3.0.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.4",
     "jest": "^27.4.5",
     "next-sitemap": "^2.5.4",
     "prettier": "^2.5.1",
