--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "12.0.7",
     "prisma": "^3.7.0",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
     "superjson": "^1.8.0",
