--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
     "framer-motion": "^6.2.6",
+    "lodash.isequal": "^4.5.0",
     "next": "12.0.7",
     "prisma": "^3.7.0",
     "react": "17.0.2",
@@ -47,6 +48,7 @@
     "@faker-js/faker": "^6.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
