--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
+    "axios": "^0.26.0",
     "framer-motion": "^6.2.6",
     "lodash.isequal": "^4.5.0",
     "next": "12.0.7",
