feat: adds script to load csv

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
     "axios": "^0.26.0",
+    "csv-parser": "^3.0.0",
     "framer-motion": "^6.2.6",
     "lodash.isequal": "^4.5.0",
     "next": "12.0.7",
