--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@prisma/client": "^3.7.0",
+    "@sentry/nextjs": "^6.18.0",
     "axios": "^0.26.0",
     "csv-parser": "^3.0.0",
     "framer-motion": "^6.2.6",
