--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
+    "sharp": "^0.30.1",
     "superjson": "^1.8.0",
     "uuid": "^8.3.2",
     "victory": "^36.2.1",
