--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -63,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "next-sitemap": "^2.5.4",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "4.5.4"
