--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://jevote:jevote@localhost:5432/jevote?schema=public"
 PREVIEW_SECRET=verysecret
+SENTRY_AUTH_TOKEN=sentryAuthToken
