--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "csv-parser": "^3.0.0",
     "framer-motion": "^6.2.6",
     "lodash.isequal": "^4.5.0",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "prisma": "^3.7.0",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
